mailto finishing touches

--- a/contact.html
+++ b/contact.html
@@ -79,28 +79,28 @@
                             <div class="row">
                                 <!--put in your first name.-->
                                 <div class="input-field col s12">
-                                    <input id="first_name" type="text" class="validate">
+                                    <input id="first_name" type="text" name="first_name" class="validate">
                                     <label for="first_name" class="black-text">First Name</label>
                                 </div>
                             </div>
                             <div class="row">
                                 <!-- put in your last name. -->
                                 <div class="input-field col s12">
-                                    <input id="last_name" type="text" class="validate">
+                                    <input id="last_name" type="text" name="last_name" class="validate">
                                     <label for="last_name" class="black-text">Last Name</label>
                                 </div>
                             </div>
                             <div class="row">
                                 <!-- put in your email address -->
                                 <div class="input-field col s12">
-                                    <input id="email" type="email" class="validate">
+                                    <input id="email" type="email" name="email" class="validate">
                                     <label for="email" class="black-text">Email Address</label>
                                 </div>
                             </div>
                             <div class="row">
                                 <!-- type your message here. -->
                                 <div class="input-field col s12">
-                                    <textarea id="textarea1" class="materialize-textarea"></textarea>
+                                    <textarea id="textarea1" name="comments" class="materialize-textarea"></textarea>
                                     <label for="textarea1" class="black-text">Textarea</label>
                                 </div>
                             </div>
