--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
             <div class="row">
                 <div class="card z-depth-5">
                     <div class="card-content">
-                        <form action="mailto:wilmiller@gmail.com" method="POST" enctype="text/plain">
+                        <form action="mailto:wilmiller@gmail.com?subject=portfolio_contact" method="POST" enctype="text/plain">
                             <!--this is where all of the html for the request form goes.-->
                             <div class="row">
                                 <!--put in your first name.-->
@@ -101,7 +101,7 @@
                                 <!-- type your message here. -->
                                 <div class="input-field col s12">
                                     <textarea id="textarea1" name="comments" class="materialize-textarea"></textarea>
-                                    <label for="textarea1" class="black-text">Textarea</label>
+                                    <label for="comments" class="black-text">Textarea</label>
                                 </div>
                             </div>
                             <button class="btn waves-effect waves-light amber lighten-1" type="submit" name="action">Submit
