--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col l6">
                     <h2 id="header-name"> Hello!! </h2>
-                    <p id="p1">My name is Will Miller, I am a full-stack web-developer focused on clean, content focused design and functionality. I love the simple things in life like a artfully brewed up of coffee, disc golf with friends,  a sunny day to attend an Atlanta Braves game and the way good clean code looks on my computer screen. Web Development is more than just a career for me but a passion, it’s something that fuels my desire to solve problems and continuously learn new things.</p>
+                    <p id="p1">My name is Will Miller, I am a full-stack web-developer focused on clean, content-focused design and functionality. I love the simple things in life like an artfully brewed cup of coffee, disc golf with friends,  a sunny day to attend an Atlanta Braves game and the way good clean code looks on my computer screen. Web Development is more than just a career for me but a passion, it’s something that fuels my desire to solve problems and continuously learn new things.</p>
                 </div>
             </div>
             <div class="row">
