--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="row">
                 <div class="col l12">
-                    <p id="p2">I graduated from the Campbell School of Business at Berry College with a bachelors degree in Marketing in 2015. During the years following my graduation I was able to pursue my dream of working in the Specialty Coffee Industry in multiple amazing local coffee shops all over Georgia. My work in the Specialty Coffee industry has given me an incredible attention to detail and a love for things that are artfully and precisely crafted. At the beginning of 2018 I left the Specialty Coffee Industry and entered into the Full-Stack Flex Web Development program at The Georgia Institute of Technology. It was during this course that I found a love for programming and building incredible applications and websites. </p>
+                    <p id="p2">I graduated from the Campbell School of Business at Berry College with a bachelors degree in Marketing in 2015. During the years following my graduation, I was able to pursue my dream of working in the Specialty Coffee Industry in multiple amazing local coffee shops all over Georgia. My work in the Specialty Coffee industry has given me an incredible attention to detail and a love for things that are artfully and precisely crafted. At the beginning of 2018, I left the Specialty Coffee Industry and entered into the Full-Stack Flex Web Development program at The Georgia Institute of Technology. It was during this course that I found a love for programming and building incredible applications and websites.  </p>
                 </div>
             </div>
         </div>
