finished Mobile Responsivness

--- a/gallery.html
+++ b/gallery.html
@@ -66,19 +66,19 @@
             <div class="row">
                 <div class="card z-depth-5">
                     <div class="card-content">
-                        <div class="col l12">
+                        <div class="col l12 col m12 col s12">
                             <h1 class="center-align" id="galleryHeader"> Gallery </h1>
                         </div>
 
                         <hr>
                         <div class="row">
-                            <div class="col l5 z-depth-4" id="galleryImage">
+                            <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
                                 <!-- this is where the first of the project linked images go. -->
                                 <a href="https://pickled-malamute-15436.herokuapp.com/"><img src="images/ZigRigResized.png" class="responsive-img portImg ZigRig"></a>
                                 <h5 class="center-align">Zig Rig</h5>
                                 <p class="center-align">Power distribution planning app to help with balancing load for generators</p>
                             </div>
-                            <div class="col l5 z-depth-4" id="galleryImage">
+                            <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
                                 <!-- this is where the second of the project linked images go. -->
                                 <a href="https://will-miller93.github.io/Clicky-Game-React/"><img src="images/zeldaClickyGameResized.png" class="responsive-img portImg zelda"></a>
                                 <h5 class="center-align">Zelda Clicky React Game</h5>
@@ -86,13 +86,13 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col l5 z-depth-4" id="galleryImage">
+                            <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
                                 <!-- this is where the third of the project linked images goes.-->
                                 <a href="https://dry-citadel-82866.herokuapp.com/"><img src="images/fullStackResized.png" class="responsive-img portImg fullstack"></a>
-                                <h5 class="center-align">Full Stack React App</h5>
+                                <h5 class="center-align">Full Stack React Reading List App</h5>
                                 <p class="center-align"> Full stack Reac.js reading list app </p>
                             </div>
-                            <div class="col l5 z-depth-4" id="galleryImage">
+                            <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
                                 <!-- this is where the fourth of the project linked images goes. -->
                                 <a href="https://stark-bayou-83094.herokuapp.com/"><img src="images/friendFinderResized.png" class="responsive-img portImg friendfinder"></a>
                                 <h5 class="center-align">Friend Finder App</h5>
@@ -100,13 +100,13 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col l5 z-depth-4" id="galleryImage">
+                            <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
                                 <!-- this is where the fifth of the project linked images goes. -->
                                 <a href="https://will-miller93.github.io/Manchester_Orchestra_Hangman_game/"><img src="images/manchesterHangManResized.png" class="responsive-img portImg HangMan"></a>
-                                <h5 class="center-align">Hangman</h5>
+                                <h5 class="center-align">Manchester Orchestra Hangman</h5>
                                 <p class="center-align"> Javascript hangman game themed after the band Manchester Orchestra </p>
                             </div>
-                            <div class="col l5 z-depth-4" id="galleryImage">
+                            <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
                                 <!-- this is where the sixth of the project linked images goes. -->
                                 <a href="https://justincrywolf.github.io/moodShotV2/"><img  src="images/moodShotLogoResized.png" class="responsive-img portImg moodShot"></a>
                                 <h5 class="center-align">Mood Shot</h5>
@@ -144,7 +144,7 @@
                         <br>
                         <h3>CSS</h3>
                         <hr>
-                        <div class="col l12 imgs">
+                        <div class="col l12 col m12 col s12 imgs">
                             <!-- fill these with logo icons of technologies used in the category -->
                             <a>
                                 <img class="responsive-img icon" src="./images/css3_logo.png">
