--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="background">
                 <img src="images/woodGrainImage.jpg">
             </div>
-            <a href="#!User"><img class="circle z-depth-5" id="navbarimage" src="images/resizedProfileImage.png"></a>
+            <a href="#!User"><img class="circle z-depth-5 responsive-img" id="navbarimage" src="images/resizedProfileImage.png"></a>
             <a href="#!name"><span class="black-text name" id="name">Will Michael Miller</span></a>
             <a href="#!email"><span class="black-text email" id="email">wilmiller@gmail.com</span></a>
         </div></li>
@@ -45,15 +45,15 @@
         <div class="container">
             <div class="row">
                 <div>
-                    <img class="col l4" id="mainPage-Image" src="images/aboutImage.png">
+                    <img class="col l4 col m4 col s4" id="mainPage-Image" src="images/aboutImage.png">
                 </div>
-                <div class="col l6">
+                <div class="col l6 col m4 col s12">
                     <h2 id="header-name"> Hello!! </h2>
                     <p id="p1">My name is Will Miller, I am a full-stack web-developer focused on clean, content-focused design and functionality. I love the simple things in life like an artfully brewed cup of coffee, disc golf with friends,  a sunny day to attend an Atlanta Braves game and the way good clean code looks on my computer screen. Web Development is more than just a career for me but a passion, it’s something that fuels my desire to solve problems and continuously learn new things.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col l12">
+                <div class="col l12 col m12 col s12">
                     <p id="p2">I graduated from the Campbell School of Business at Berry College with a bachelors degree in Marketing in 2015. During the years following my graduation, I was able to pursue my dream of working in the Specialty Coffee Industry in multiple amazing local coffee shops all over Georgia. My work in the Specialty Coffee industry has given me an incredible attention to detail and a love for things that are artfully and precisely crafted. At the beginning of 2018, I left the Specialty Coffee Industry and entered into the Full-Stack Flex Web Development program at The Georgia Institute of Technology. It was during this course that I found a love for programming and building incredible applications and websites.  </p>
                 </div>
             </div>
