--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col m6 l12">
+                <div class="col l12 col m12 col s12">
                     <div class="card z-depth-5">
                         <div class="card-content black-text center-align">
                             <span class="card-title"> You can also find me here! </span>
