--- a/gallery.html
+++ b/gallery.html
@@ -80,11 +80,24 @@
                             </div>
                             <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
                                 <!-- this is where the second of the project linked images go. -->
-                                <a href="https://will-miller93.github.io/Clicky-Game-React/"><img src="images/zeldaClickyGameResized.png" class="responsive-img portImg zelda"></a>
-                                <h5 class="center-align">Zelda Clicky React Game</h5>
-                                <p class="center-align">An image clicking game made entirely in React.js based on the video game series "The Legend of Zelda"</p>
+                                <a href="https://pure-taiga-14555.herokuapp.com/"><img src="images/CoffeeFinder.png" class="responsive-img portImg zelda"></a>
+                                <h5 class="center-align">Coffee Finder</h5>
+                                <p class="center-align">Coffee Finder is a fullstack web application that utilizes the google maps and geocoding APIs to allow users to be able to find specialty coffee shops in their area.</p>
                             </div>
                         </div>
+                        <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
+                            <!-- this is where the first of the project linked images go. -->
+                            <a href="https://calm-brushlands-97195.herokuapp.com/"><img src="images/TreeViewResized.png" class="responsive-img portImg Tree"></a>
+                            <h5 class="center-align">Tree Viewer App</h5>
+                            <p class="center-align">Simple Tree View React web application utilizing web sockets to update in real time.</p>
+                        </div>
+                        <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
+                            <!-- this is where the second of the project linked images go. -->
+                            <a href="https://will-miller93.github.io/Coordinate-Map/"><img src="images/googleMapsResized.png" class="responsive-img portImg Map"></a>
+                            <h5 class="center-align">Coordinate Map</h5>
+                            <p class="center-align">A lightweight visualization of randomly generated coordinates using the Google Maps API</p>
+                        </div>
+                    </div>
                         <div class="row">
                             <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
                                 <!-- this is where the third of the project linked images goes.-->
@@ -107,10 +120,10 @@
                                 <p class="center-align"> Javascript hangman game themed after the band Manchester Orchestra </p>
                             </div>
                             <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
-                                <!-- this is where the sixth of the project linked images goes. -->
-                                <a href="https://justincrywolf.github.io/moodShotV2/"><img  src="images/moodShotLogoResized.png" class="responsive-img portImg moodShot"></a>
-                                <h5 class="center-align">Mood Shot</h5>
-                                <p class="center-align">Simple app utilizing facial recognition api and a recipe api to find the perfect cocktail for the mood you're in.</p>
+                                <!-- this is where the second of the project linked images go. -->
+                                <a href="https://will-miller93.github.io/Clicky-Game-React/"><img src="images/zeldaClickyGameResized.png" class="responsive-img portImg zelda"></a>
+                                <h5 class="center-align">Zelda Clicky React Game</h5>
+                                <p class="center-align">An image clicking game made entirely in React.js based on the video game series "The Legend of Zelda"</p>
                             </div>
                         </div>
                     </div>
