fixed styling in new gallery

--- a/gallery.html
+++ b/gallery.html
@@ -85,6 +85,8 @@
                                 <p class="center-align">Coffee Finder is a fullstack web application that utilizes the google maps and geocoding APIs to allow users to be able to find specialty coffee shops in their area.</p>
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col l5 col m5 col s4 z-depth-4" id="galleryImage">
                             <!-- this is where the first of the project linked images go. -->
                             <a href="https://calm-brushlands-97195.herokuapp.com/"><img src="images/TreeViewResized.png" class="responsive-img portImg Tree"></a>
